--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#60616D</color>
-    <color name="colorPrimaryDark">#383242</color>
+    <color name="colorPrimary">@color/cardColor</color>
+    <color name="colorPrimaryDark">@color/secCardColor</color>
     <color name="colorAccent">#FFC107</color>
 
     <color name="backgroundColor">#383242</color>
+    <color name="colorWhite">#FFFFFF</color>
     <color name="backgroundColorLight">#60616D</color>
     <color name="seperatorLineColor">#9EA0A6</color>
     <color name="cardColor">#3459E6</color>
+    <color name="secCardColor">#08BC5C</color>
+<!--    #3da46d-->
 </resources>
