--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -4,5 +4,7 @@
         <item>@font/baloo</item>
         <item>@font/bevan</item>
         <item>@font/fugaz_one</item>
+        <item>@font/lato</item>
+        <item>@font/muli</item>
     </array>
 </resources>
