--- a/app/src/main/res/layout/activity_bucket_add.xml
+++ b/app/src/main/res/layout/activity_bucket_add.xml
@@ -15,21 +15,39 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorPrimaryDark"
+        android:background="@color/colorWhite"
         android:orientation="vertical"
         tools:context=".ui.BucketAddActivity">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingStart="@dimen/largeMargin">
+
+            <ImageView
+                android:id="@+id/backButtonImageView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_back"
+                android:layout_marginTop="@dimen/smallMargin"
+                android:layout_gravity="center_vertical"
+                />
 
 
         <TextView
             style="@style/TextAppearance.AppCompat.Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            android:fontFamily="@font/fugaz_one"
+            android:layout_marginTop="12dp"
+            android:fontFamily="@font/muli"
+            android:textStyle="bold"
+            android:padding="8dp"
             android:text="@string/create_bucket"
-            android:textColor="@android:color/white"
-            android:textSize="25sp" />
+            android:textColor="@android:color/black"
+            android:textSize="22sp" />
+
+        </LinearLayout>
 
         <View
             android:id="@+id/viewSeperator"
@@ -38,8 +56,7 @@
             android:alpha="0.25"
             android:layout_marginTop="10dp"
             android:background="@color/seperatorLineColor"
-            android:layout_marginStart="@dimen/largeMargin"
-            android:layout_marginEnd="@dimen/largeMargin"
+            android:elevation="10dp"
             />
 
 
@@ -176,13 +193,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginTop="60dp"
+                    android:layout_marginTop="40dp"
                     android:textColor="@android:color/white"
-                    android:backgroundTint="@color/colorAccent"
+                    android:backgroundTint="@color/secCardColor"
                     android:layout_marginStart="@dimen/largeMargin"
                     android:layout_marginEnd="@dimen/largeMargin"
+                    android:padding="12dp"
                     android:text="@string/create_bucket_button"
-                    android:fontFamily="@font/fugaz_one"
+                    android:fontFamily="@font/muli"
                     android:layout_marginBottom="25dp"
                     app:cornerRadius="6dp" />
             </LinearLayout>
