--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.splash.SplashActivity"
-    android:background="@color/backgroundColor"
+    android:background="@color/colorPrimaryDark"
     >
 
     <com.airbnb.lottie.LottieAnimationView
@@ -24,19 +24,7 @@
         app:lottie_loop="false"
         />
 
-    <TextView
-        android:id="@+id/devNameTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:textColor="@android:color/white"
-        android:fontFamily="@font/fugaz_one"
-        android:layout_marginBottom="@dimen/largeMargin"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0"
-        android:text="@string/app_name" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
