--- a/app/src/main/res/layout/container_categories.xml
+++ b/app/src/main/res/layout/container_categories.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="8dp"
-        android:background="@color/cardColor"
+        android:background="@color/colorWhite"
         >
 
         <ImageView
@@ -33,9 +33,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="Travel"
-            android:textColor="@android:color/white"
-            android:fontFamily="@font/fugaz_one"
-            android:textSize="20sp"
+            android:textColor="@android:color/black"
+            android:fontFamily="@font/muli"
+            android:textSize="22sp"
             android:layout_marginLeft="4dp"
             android:layout_marginTop="80dp"
             app:layout_constraintTop_toBottomOf="@id/iv_categoryImage"
