--- a/app/src/main/res/layout/fragment_bottom_nav_drawer.xml
+++ b/app/src/main/res/layout/fragment_bottom_nav_drawer.xml
@@ -9,7 +9,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/cardColor"
+        android:background="@color/colorPrimaryDark"
         >
 
         <com.google.android.material.navigation.NavigationView
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:menu="@menu/bottom_appbar_menu"
-            android:background="@color/cardColor"
+            android:background="@color/colorPrimaryDark"
             android:layout_gravity="bottom"
             android:layout_marginTop="12dp"
             android:layout_marginStart="8dp"
