--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,22 +14,22 @@
 
         <item name="android:textSize">@dimen/textViewTextSize</item>
         <item name="android:textStyle">bold</item>
-        <item name="fontFamily">@font/baloo</item>
-        <item name="android:textColor">@android:color/white</item>
+        <item name="fontFamily">@font/muli</item>
+        <item name="android:textColor">@android:color/black</item>
         <item name="android:paddingStart">@dimen/largePadding</item>
         <item name="android:layout_marginTop">@dimen/largeMargin</item>
-
+        <item name="android:layout_marginBottom">@dimen/largeMargin</item>
     </style>
 
     <style name="CategoryEditTextStyles">
 
         <item name="android:textSize">@dimen/EditTextSize</item>
-        <item name="fontFamily">@font/baloo</item>
-        <item name="background">@android:color/white</item>
+        <item name="fontFamily">@font/muli</item>
+        <item name="background">@android:color/black</item>
         <item name="hintTextColor">@color/seperatorLineColor</item>
-        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textColor">@android:color/black</item>
         <item name="android:paddingStart">@dimen/largePadding</item>
-        <item name="android:layout_marginStart">@dimen/largeMargin</item>
+        <item name="android:layout_marginStart">6dp</item>
         <item name="android:layout_marginEnd">@dimen/largeMargin</item>
         <item name="android:layout_marginTop">@dimen/largeMargin</item>
 
@@ -51,7 +51,7 @@
 
     <style name="ChipTextAppearance" parent="TextAppearance.MaterialComponents.Chip">
         <item name="android:textSize">16sp</item>
-        <item name="fontFamily">@font/baloo</item>
+        <item name="fontFamily">@font/muli</item>
     </style>
 
 
