Added Delete Query in DAO User could delete a dream Added Alert Dialog while deleting a dream Added a layer with delete icon under the viewHolder

--- a/app/src/main/res/layout/activity_bucket_add.xml
+++ b/app/src/main/res/layout/activity_bucket_add.xml
@@ -18,7 +18,7 @@
             android:layout_height="match_parent"
             android:background="@color/colorWhite"
             android:orientation="vertical"
-            tools:context=".ui.BucketAddActivity">
+            tools:context=".ui.activities.BucketAddActivity">
 
             <LinearLayout
                 android:layout_width="wrap_content"
