--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -55,5 +55,23 @@
     </style>
 
 
+    <style name="AlertDialogTheme" parent="ThemeOverlay.MaterialComponents.Dialog.Alert">
+        <item name="android:buttonBarNegativeButtonStyle">@style/negativeButtonStyle</item>
+        <item name="android:buttonBarPositiveButtonStyle">@style/positiveButtonStyle</item>
+
+    </style>
+
+    <style name="negativeButtonStyle" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
+        <item name="android:layout_marginEnd">20dp</item>
+        <item name="android:textColor">@android:color/holo_red_light</item>
+<!--        <item name="android:backgroundTint">@android:color/holo_red_light</item>-->
+    </style>
+
+    <style name="positiveButtonStyle" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
+        <item name="android:layout_marginEnd">20dp</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:backgroundTint">@color/cardColor</item>
+    </style>
+
 
 </resources>
